--- a/pipelane-marketing/src/components/Icon.astro
+++ b/pipelane-marketing/src/components/Icon.astro
@@ -97,6 +97,53 @@ const icons: Record<string, IconShape> = {
       { cx: 12, cy: 12, r: 8 },
       { cx: 12, cy: 12, r: 4 }
     ]
+  },
+  calendar: {
+    paths: [
+      { d: "M7 3V6" },
+      { d: "M17 3V6" },
+      { d: "M4 9H20" },
+      { d: "M5 6H19C20.105 6 21 6.895 21 8V19C21 20.105 20.105 21 19 21H5C3.895 21 3 20.105 3 19V8C3 6.895 3.895 6 5 6Z" },
+      { d: "M8 12H10" },
+      { d: "M14 12H16" },
+      { d: "M8 16H10" }
+    ]
+  },
+  headset: {
+    paths: [
+      { d: "M12 5C7.582 5 4 8.582 4 13V17C4 18.105 4.895 19 6 19H8" },
+      { d: "M12 5C16.418 5 20 8.582 20 13V17C20 18.105 19.105 19 18 19H16" },
+      { d: "M8 19V16" },
+      { d: "M16 19V16" },
+      { d: "M10 21H14" }
+    ]
+  },
+  rocket: {
+    paths: [
+      { d: "M12 2C15.866 2 18.5 5.5 18.5 5.5C18.5 5.5 16 9 16 13C16 17 18.5 20.5 18.5 20.5C18.5 20.5 14 19 12 19C10 19 5.5 20.5 5.5 20.5C5.5 20.5 8 17 8 13C8 9 5.5 5.5 5.5 5.5C5.5 5.5 8.134 2 12 2Z" },
+      { d: "M12 11C13.105 11 14 11.895 14 13C14 14.105 13.105 15 12 15C10.895 15 10 14.105 10 13C10 11.895 10.895 11 12 11Z" },
+      { d: "M12 19V22" }
+    ]
+  },
+  sparkle: {
+    paths: [
+      { d: "M12 4L13.2 8.2L17.5 9.5L13.2 10.8L12 15L10.8 10.8L6.5 9.5L10.8 8.2L12 4Z" },
+      { d: "M6.5 17L7 18.5L8.5 19L7 19.5L6.5 21L6 19.5L4.5 19L6 18.5L6.5 17Z" },
+      { d: "M17.5 15L18 16.5L19.5 17L18 17.5L17.5 19L17 17.5L15.5 17L17 16.5L17.5 15Z" }
+    ]
+  },
+  chartTrend: {
+    paths: [
+      { d: "M3 3V21H21" },
+      { d: "M7 15L12 10L16 13L21 8" },
+      { d: "M16 13L21 8" }
+    ]
+  },
+  clock: {
+    circles: [{ cx: 12, cy: 12, r: 8 }],
+    paths: [
+      { d: "M12 8V12L15 14" }
+    ]
   }
 };
 
